--- a/src/kernels/rodinia/makefile
+++ b/src/kernels/rodinia/makefile
@@ -1,3 +1,29 @@
+#
+# Copyright(C) 2015-2016 Pedro H. Penna <pedrohenriquepenna@gmail.com
+#
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+#  
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#  
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+# MA 02110-1301, USA.
+#
+
+#
+# Rodinia Benchmark Suite
+#   - BP: backpropagation training
+#   + BFS: breadth-first search
+#   + CFD: 3D euler equation solver
+#
+
 # Directories.
 export BINDIR = $(CURDIR)/bin
 
@@ -19,7 +45,7 @@ OMP:
 	mkdir -p  $(BINDIR)
 	cd openmp/backprop && $(MAKE) all
 	cd openmp/bfs && $(MAKE) all
-#	cd openmp/cfd && $(MAKE)
+	cd openmp/cfd && $(MAKE) all
 #	cd openmp/heartwall && $(MAKE)
 #	cd openmp/hotspot && $(MAKE)
 #	cd openmp/kmeans/kmeans_openmp && $(MAKE)
