--- a/src/kernels/mst/makefile
+++ b/src/kernels/mst/makefile
@@ -1,25 +1,38 @@
 #
-# Copyright(C) 2014 Pedro H. Penna <pedrohenriquepenna@gmail.com>
-#
+# Copyright(C) 2016 Pedro H. Penna <pedrohenriquepenna@gmail.com>
+# 
+# This program is free software; you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation; either version 2 of the License, or
+# (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
+# MA 02110-1301, USA.
+
+# Tweaks on toolchain.
+CFLAGS += -I include
 
 # Executable file.
 EXEC = mst
 
 # Builds static version.
 static:
-	$(CC) *.c $(CFLAGS) -rdynamic -D_SCHEDULE_STATIC_ -o $(BINDIR)/$(EXEC).static $(LIBS)
+	$(CC) *.c $(CFLAGS) -D_SCHEDULE_STATIC_ -o $(BINDIR)/$(EXEC).static $(LIBS)
 
 # Builds dynamic version.
 dynamic:
-	$(CC) *.c $(CFLAGS) -rdynamic -D_SCHEDULE_DYNAMIC_ -o $(BINDIR)/$(EXEC).dynamic $(LIBS)
+	$(CC) *.c $(CFLAGS) -D_SCHEDULE_DYNAMIC_ -o $(BINDIR)/$(EXEC).dynamic $(LIBS)
 
-# Builds smart-round-robin version.
-smart-round-robin:
-	$(CC) *.c $(CFLAGS) -rdynamic -D_SCHEDULE_SRR_ -o $(BINDIR)/$(EXEC).srr $(LIBS)
-
-# Builds oracle version.
-oracle:
-	$(CC) *.c $(CFLAGS) -rdynamic -D_SCHEDULE_ORACLE_ -o $(BINDIR)/$(EXEC).oracle $(LIBS)
+# Builds guided version.
+guided:
+	$(CC) *.c $(CFLAGS) -D_SCHEDULE_GUIDED_ -o $(BINDIR)/$(EXEC).srr $(LIBS)
 
 # Cleans compilation files.
 clean:
