--- a/src/kernels/is/makefile
+++ b/src/kernels/is/makefile
@@ -1,31 +1,26 @@
 #
-# Copyright(C) 2015-2016 Pedro H. Penna <pedrohenriquepenna@gmail.com>
-#
+# Copyright(C) 2016 Pedro H. Penna <pedrohenriquepenna@gmail.com>
+# 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
 # the Free Software Foundation; either version 2 of the License, or
 # (at your option) any later version.
-#  
+# 
 # This program is distributed in the hope that it will be useful,
 # but WITHOUT ANY WARRANTY; without even the implied warranty of
 # MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 # GNU General Public License for more details.
-#  
+# 
 # You should have received a copy of the GNU General Public License
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 # MA 02110-1301, USA.
-# 
-# CLASS
-CLASS=CLASS_A
 
-NUM_BUCKETS_LOG_2=3
+# Tweaks on toolchain.
+CFLAGS += -I include
 
 # Executable file.
 EXEC = is
-
-# Class.
-CFLAGS += -DCLASS=$(CLASS) -DNUM_BUCKETS_LOG_2=$(NUM_BUCKETS_LOG_2)
 
 # Builds static version.
 static:
@@ -39,8 +34,8 @@ dynamic:
 guided:
 	$(CC) *.c $(CFLAGS) -D_SCHEDULE_GUIDED_ -o $(BINDIR)/$(EXEC).guided $(LIBS)
 
-# Builds smart-round-robin version.
-smart-round-robin:
+# Builds srr.
+srr:
 	$(CC) *.c $(CFLAGS) -D_SCHEDULE_SRR_ -o $(BINDIR)/$(EXEC).srr $(LIBS)
 
 # Cleans compilation files.
