[EPCC] Use the libgomp shared library for linking + silence the messages telling *.o can't be found when using make clean.

--- a/src/kernels/EPCC/Makefile
+++ b/src/kernels/EPCC/Makefile
@@ -61,9 +61,9 @@ taskbench: $(TASKOBJS)
 	$(CC) -o taskbench $(LDFLAGS) $(OMPFLAG) $(TASKOBJS) $(CLOCKOBJS) $(LIBS) -lm 
 
 clean: 
-	-rm *.o syncbench schedbench arraybench_* taskbench
+	-rm -f *.o syncbench schedbench arraybench_* taskbench
 
 clean-all: clean 	
-	-rm OpenMPBench.* *.all
+	-rm -f OpenMPBench.* *.all
 
 
