--- a/src/benchmark/makefile
+++ b/src/benchmark/makefile
@@ -42,8 +42,8 @@ srr: $(LIBGOMP_SRR)
 	$(CC) *.c $(CFLAGS) -D_SCHEDULE_SRR_ -o $(BINDIR)/$(EXEC).srr $(LIBS) $(LIBGOMP_SRR)
 
 # Builds adaptive.
-adaptive: $(LIBGOMP_ADAPTIVE)
-	$(CC) *.c $(CFLAGS) -D_SCHEDULE_ADAPTIVE_ -o $(BINDIR)/$(EXEC).adaptive $(LIBS) $(LIBGOMP_ADAPTIVE) -lnuma
+adaptive: $(LIBGOMP_SRR)
+	$(CC) *.c $(CFLAGS) -D_SCHEDULE_ADAPTIVE_ -o $(BINDIR)/$(EXEC).adaptive $(LIBS) $(LIBGOMP_SRR) -lnuma
 
 # Cleans compilation files.
 clean:
