--- a/src/libgomp/omp.h.in
+++ b/src/libgomp/omp.h.in
@@ -27,19 +27,19 @@
 
 #ifndef _LIBGOMP_OMP_LOCK_DEFINED
 #define _LIBGOMP_OMP_LOCK_DEFINED 1
-/* These two structures get edited by the libgomp build process to 
+/* These two structures get edited by the libgomp build process to
    reflect the shape of the two types.  Their internals are private
    to the library.  */
 
 typedef struct
 {
-  unsigned char _x[@OMP_LOCK_SIZE@] 
+  unsigned char _x[@OMP_LOCK_SIZE@]
     __attribute__((__aligned__(@OMP_LOCK_ALIGN@)));
 } omp_lock_t;
 
 typedef struct
 {
-  unsigned char _x[@OMP_NEST_LOCK_SIZE@] 
+  unsigned char _x[@OMP_NEST_LOCK_SIZE@]
     __attribute__((__aligned__(@OMP_NEST_LOCK_ALIGN@)));
 } omp_nest_lock_t;
 #endif
@@ -49,7 +49,9 @@ typedef enum omp_sched_t
   omp_sched_static = 1,
   omp_sched_dynamic = 2,
   omp_sched_guided = 3,
-  omp_sched_auto = 4
+  omp_sched_binlpt = 4,
+  omp_sched_srr = 5,
+  omp_sched_auto = 6
 } omp_sched_t;
 
 typedef enum omp_proc_bind_t
