--- a/src/libgomp/omp.h.in
+++ b/src/libgomp/omp.h.in
@@ -110,8 +110,9 @@ extern int omp_get_team_size (int) __GOMP_NOTHROW;
 extern int omp_get_active_level (void) __GOMP_NOTHROW;
 
 #include <stdbool.h>
-extern void omp_set_workload(unsigned, unsigned *, unsigned, bool);
-extern unsigned omp_loop_register(const char *);
+extern void omp_set_workload (unsigned, unsigned *, unsigned, bool) __GOMP_NOTHROW;
+extern unsigned omp_loop_register (const char *) __GOMP_NOTHROW;
+extern void omp_loop_unregister (unsigned) __GOMP_NOTHROW;
 
 extern int omp_in_final (void) __GOMP_NOTHROW;
 
